2015-11-25  Gary Funck  <gary@intrepid.com>

	* Makefile.am: Fix spelling.
	* Makefile.in: Re-generate.
	* collectives/upc_coll_init.upc: Ditto.
	* collectives/upc_coll_prefix_reduce.in: Ditto.
	* include/gasp_upc.h: Ditto.
	* portals4/gupcr_barrier.c: Ditto.
	* portals4/gupcr_pts.h: Ditto.
	* smp/upc_gum.c: Ditto.
	* smp/upc_main.c: Ditto.
	* smp/upc_pts.h: Ditto.

2015-11-22  Gary Funck  <gary@intrepid.com>

	* ax_prog_doxygen.m4: Fix spelling.
	* configure.ac: Ditto.
	* portals4/doxygen.cfg.in: Ditto.
	* portals4/gupcr_coll_sup.c: Ditto.
	* portals4/gupcr_gmem.h: Ditto.
	* portals4/gupcr_nb_sup.c: Ditto.
	* smp/upc_affinity.c: Ditto.
	* smp/upc_main.c: Ditto.
	* configure: Re-generate.

2015-11-04  Gary Funck  <gary@intrepid.com>

	* smp/upc_sync.h (GUPCR_WRITE_FENCE, GUPCR_READ_FENCE):
	Define for __aarch64__.

2015-10-21  Gary Funck  <gary@intrepid.com>

	* upc-crtbegin.spec.in, upc-crtend.spec.in:
	Refer to -fupc, not -fupc-link, in comment.

2015-10-17  Gary Funck  <gary@intrepid.com>

	* smp/upc_sup.h (upc_shared_ptr_alias_t): Delete.
	Remove this type, no longer needed because the runtime is
	built with -fno-strict-aliasing.

2015-10-13  Gary Funck  <gary@intrepid.com>

	* testsuite/lib/libgupc.exp: Load multiline.exp before prune.exp,
	using load_gcc_lib.

2015-10-07  Gary Funck  <gary@intrepid.com>

	* config/default/upc-crt-begin-end.h (GUPCR_SHARED_BEGIN_NAME,
	GUPCR_SHARED_END_NAME, GUPCR_PGM_INFO_BEGIN_NAME,
	GUPCR_PGM_INFO_END_NAME, GUPCR_INIT_ARRAY_BEGIN_NAME,
	GUPCR_INIT_ARRAY_END_NAME): New.  Move from gcc/defaults.h
	and rename UPC_* to GUPCR_*.
	* configure.ac: Determine UPC linker support by querying
	GUPC builtin preprocessor symbol.
	Remove --enable-upc-link-script option.
	* upc-crtstuff.c: Include upc-crt-begin-end.h.
	* configure: Re-generate.

2015-10-04  Gary Funck  <gary@intrepid.com>

	* configure.ac: Extract UPC-related section names from
	pre-defined's passed by the UPC compiler.