@@ -43,7 +43,7 @@ see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
 #define __UPC_XSTR__(S) __UPC_STR__(S)
 
 #ifdef __UPC_STATIC_THREADS__
-/* Defined at compile time by the -fupc-threads-N switch.  */
+/* Defined at compile time by the -fupc-threads=N switch.  */
 #define __UPC_N_THREADS__ THREADS
 #define __UPC_STR__(S) #S
 #define __UPC_XSTR__(S) __UPC_STR__(S)
